--- a/index.html
+++ b/index.html
@@ -27,29 +27,30 @@
 <section>  
 <div class="container-border">
    <div class="border"><img class="email" src="images/email.svg" alt="email"></div>
-   <div class="border"><img class="Phone" src="images/Phone.svg" alt="Phone"></div>
-   <div class="border"><img class="location" src="images/location.svg" alt="location"></div>
-</div>
-<div class="container-P">
-  <div class="Txt">
-  <div class="maimuni">   
+   <div class="maimuni">   
     <label class="meili">Email</label> 
    <p class="edu">education@yahoo.edu.ge</p>
    <p class="edi">edu.e.education@yahoo.edu.ge</p>
   </div>
+</div>
 
-  <div class="txa"> 
+<div class="container-border">
+   <div class="border"><img class="Phone" src="images/Phone.svg" alt="Phone"></div>
+   <div class="txa"> 
    <label class="tele">Phone</label>  
    <p class="num">+995 591 66 6456</p>
    <p class="num">+995 591 66 6876</p>
   </div>
+</div>
 
-  <div class="spliyvi">
+<div class="container-border">
+   <div class="border"><img class="location" src="images/location.svg" alt="location"></div>
+   <div class="spliyvi">
    <label class="map">Location</label>
    <p class="str">Mail str, Chicago iinois</p>
    <p class="street">Main street, New York City</p>
    </div>
-  </div> 
+</div>
 </section>  
   <div class="container-hh">
     <div><h1 id="h1">Photos</h1></div>
@@ -87,7 +88,6 @@
       <h4>Testimonials</h4>
     </section>
 
-    <!-- Privacy -->
     <section class="footer-section">
       <p class="title">Privacy</p>
       <h4>Career</h4>
@@ -95,8 +95,9 @@
       <h4>Contact Us</h4>
       <h4>Services</h4>
     </section>
+  
+  <!-- VINMEM MOMKALIT GEXVEWEBIT -->
 
-    <!-- Contact Info -->
     <section class="footer-section">
       <p class="title">Contact Info</p>
       <h4 class="h4-yahoo">info@yahoo.com</h4>
